--- a/package.json
+++ b/package.json
@@ -20,11 +20,18 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.3.2",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.3.2",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^2.0.5",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.2",
     "@prisma/client": "^5.16.1",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1"
   },
